--- a/release/BUILD.bazel
+++ b/release/BUILD.bazel
@@ -12,6 +12,16 @@ compile_pip_requirements(
     visibility = ["//visibility:private"],
 )
 
+compile_pip_requirements(
+    name = "requirements_py310",
+    requirements_in = "requirements_py310.in",
+    requirements_txt = "requirements_py310.txt",
+    tags = [
+        "team:ci",
+    ],
+    visibility = ["//visibility:private"],
+)
+
 test_srcs = glob(["**/*.py"])
 
 ####
