--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -22,16 +22,28 @@ package(
 
 # Hermetic python environment, currently only used for CI infra and scripts.
 
-constraint_setting(name = "hermetic")
+constraint_setting(name = "python_version")
 
 constraint_value(
-    name = "hermetic_python",
-    constraint_setting = ":hermetic",
+    name = "py39",
+    constraint_setting = ":python_version",
+)
+
+constraint_value(
+    name = "py310",
+    constraint_setting = ":python_version",
 )
 
 platform(
-    name = "hermetic_python_platform",
-    constraint_values = [":hermetic_python"],
+    name = "py39_platform",
+    constraint_values = [":py39"],
+    parents = ["@local_config_platform//:host"],
+    visibility = ["//visibility:private"],
+)
+
+platform(
+    name = "py310_platform",
+    constraint_values = [":py310"],
     parents = ["@local_config_platform//:host"],
     visibility = ["//visibility:private"],
 )
