--- a/release/BUILD.bazel
+++ b/release/BUILD.bazel
@@ -251,7 +251,7 @@ py_binary(
         ["**/*.py"],
         exclude = ["ray_release/tests/*.py"],
     ),
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     deps = [":ray_release"],
 )
 
@@ -487,7 +487,7 @@ py_test(
     name = "test_alerts",
     size = "small",
     srcs = ["ray_release/tests/test_alerts.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -502,7 +502,7 @@ py_test(
     name = "test_anyscale_job_manager",
     size = "small",
     srcs = ["ray_release/tests/test_anyscale_job_manager.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -517,7 +517,7 @@ py_test(
     name = "test_anyscale_job_wrapper",
     size = "small",
     srcs = ["ray_release/tests/test_anyscale_job_wrapper.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -546,7 +546,7 @@ py_test(
         "cluster_tests/cpt_autoscaling_1-3_aws.yaml",
         "ray_release/tests/test_collection_data.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -565,7 +565,7 @@ py_test(
     data = [
         "ray_release/configs/oss_config.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -584,7 +584,7 @@ py_test(
     data = [
         "ray_release/configs/oss_config.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -602,7 +602,7 @@ py_test(
     data = [
         "ray_release/configs/oss_config.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -620,7 +620,7 @@ py_test(
     data = [
         "ray_release/configs/oss_config.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -641,7 +641,7 @@ py_test(
         "ray_release/tests/sample_5_tests.yaml",
         "ray_release/tests/sample_tests.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -656,7 +656,7 @@ py_test(
     name = "test_cluster_manager",
     size = "small",
     srcs = ["ray_release/tests/test_cluster_manager.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -682,7 +682,7 @@ py_test(
         "//python/ray/autoscaler/azure:test_configs",
         "//python/ray/autoscaler/gcp:test_configs",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -697,7 +697,7 @@ py_test(
     name = "test_env",
     size = "small",
     srcs = ["ray_release/tests/test_env.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -712,7 +712,7 @@ py_test(
     name = "test_global_config",
     size = "small",
     srcs = ["ray_release/tests/test_global_config.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -728,7 +728,7 @@ py_test(
     name = "test_glue",
     size = "small",
     srcs = ["ray_release/tests/test_glue.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -744,7 +744,7 @@ py_test(
     name = "test_log_aggregator",
     size = "small",
     srcs = ["ray_release/tests/test_log_aggregator.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -759,7 +759,7 @@ py_test(
     name = "test_result",
     size = "small",
     srcs = ["ray_release/tests/test_result.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -780,7 +780,7 @@ py_test(
         "ray_release/tests/_test_run_release_test_sh.py",
         "run_release_test.sh",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -795,7 +795,7 @@ py_test(
     name = "test_state_machine",
     size = "small",
     srcs = ["ray_release/tests/test_state_machine.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -810,7 +810,7 @@ py_test(
     name = "test_kuberay_util",
     size = "small",
     srcs = ["ray_release/tests/test_kuberay_util.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -828,7 +828,7 @@ py_test(
     data = [
         "ray_release/configs/oss_config.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -847,7 +847,7 @@ py_test(
     data = [
         "ray_release/configs/oss_config.yaml",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -862,7 +862,7 @@ py_test(
     name = "test_retry",
     size = "small",
     srcs = ["ray_release/tests/test_retry.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -876,7 +876,7 @@ py_test(
 py_test(
     name = "test_template",
     srcs = ["ray_release/tests/test_template.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -890,7 +890,7 @@ py_test(
 py_test(
     name = "test_cloud_util",
     srcs = ["ray_release/tests/test_cloud_util.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     tags = [
         "release_unit",
         "team:ci",
@@ -910,7 +910,7 @@ py_binary(
         "//python/ray/autoscaler/aws:test_configs",
         "//python/ray/autoscaler/gcp:test_configs",
     ],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     deps = [
         ":ray_release",
     ],
@@ -929,7 +929,7 @@ py_library(
 py_binary(
     name = "custom_byod_build",
     srcs = ["ray_release/scripts/custom_byod_build.py"],
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     deps = [
         ":ray_release",
     ],
@@ -949,7 +949,7 @@ py_binary(
     name = "custom_image_build_and_test_init",
     srcs = ["ray_release/scripts/custom_image_build_and_test_init.py"],
     data = glob(["release_*.yaml"]),
-    exec_compatible_with = ["//:py39"],
+    exec_compatible_with = ["//bazel:py39"],
     deps = [
         ":ray_release",
     ],
